--- a/index.html
+++ b/index.html
@@ -1,24 +1,33 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>PetProductivity - Your Virtual Pet Companion</title>
-    <meta name="description" content="A productivity Chrome extension with a virtual golden dog companion. Complete tasks to keep your pet happy and healthy!" />
-    <meta name="author" content="Lovable" />
 
-    <meta property="og:title" content="c1677ed8-cc91-4aa4-a658-c1bf1f81c89c" />
-    <meta property="og:description" content="Lovable Generated Project" />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>PetProductivity - Your Virtual Pet Companion</title>
+  <meta name="description"
+    content="A productivity Chrome extension with a virtual golden dog companion. Complete tasks to keep your pet happy and healthy!" />
+  <meta name="author" content="Lovable" />
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-  </head>
+  <meta property="og:title" content="c1677ed8-cc91-4aa4-a658-c1bf1f81c89c" />
+  <meta property="og:description" content="Lovable Generated Project" />
+  <meta property="og:type" content="website" />
+  <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:site" content="@lovable_dev" />
+  <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+</head>
+
+<!-- Recorded Audio Playback (for verification)
+<div id="audioControls" class="hidden">
+  <h3 class="text-md font-semibold text-gray-700 mb-2">Your Recorded Speech:</h3>
+  <audio id="audioPlayer" controls class="w-full rounded-lg"></audio>
+</div> -->
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
